--- a/App/Views/includes/cooperation.html
+++ b/App/Views/includes/cooperation.html
@@ -10,7 +10,7 @@
                     Když to se nou rezonuje, když to s tebou rezonuje, přišel okamžik, kdy se můžeme setkat.
                 </div>
             </div>
-            <svg  viewBox="0 0 293 221" preserveAspectRation="none" fill="none" xmlns="http://www.w3.org/2000/svg" class="cooperation-way__drawing">
+            <svg viewBox="0 0 293 221" preserveAspectRatio="none" fill="none" xmlns="http://www.w3.org/2000/svg" class="cooperation-way__drawing cooperation-way__drawing--resonance">
                 <use xlink:href="#resonance"></use>
             </svg>
         </div>
@@ -22,7 +22,7 @@
                     na život.                 
                 </div>
             </div>
-            <svg viewBox="0 0 278 233" fill="none" xmlns="http://www.w3.org/2000/svg" class="cooperation-way__drawing">
+            <svg preserveAspectRatio="none" viewBox="0 0 278 233" fill="none" xmlns="http://www.w3.org/2000/svg" class="cooperation-way__drawing cooperation-way__drawing--dynamics">
                 <use xlink:href="#dynamics"></use>
             </svg>
         </div>
@@ -35,7 +35,7 @@
                     V průběhu setkávání se stávám jejich součástí. Loučíme se ve vzájemné proměně.
                 </div>
             </div>
-            <svg viewBox="0 0 219 203" fill="none" xmlns="http://www.w3.org/2000/svg" class="cooperation-way__drawing">
+            <svg preserveAspectRatio="none" viewBox="0 0 219 203" fill="none" xmlns="http://www.w3.org/2000/svg" class="cooperation-way__drawing cooperation-way__drawing--institutions">
                 <use xlink:href="#institutions"></use>
             </svg>
         </div>
@@ -46,7 +46,7 @@
                     Kapacita pro individuální konzultace je naplněna, nové klienty v současné době nepřijímám.
                 </div>
             </div>
-            <svg viewBox="0 0 219 203" fill="none" xmlns="http://www.w3.org/2000/svg" class="cooperation-way__drawing">
+            <svg preserveAspectRatio="none" viewBox="0 0 219 203" fill="none" xmlns="http://www.w3.org/2000/svg" class="cooperation-way__drawing cooperation-way__drawing--consultations">
                 <use xlink:href="#consultations"></use>
             </svg>
         </div>
