--- a/App/Views/includes/organizations.html
+++ b/App/Views/includes/organizations.html
@@ -16,24 +16,46 @@
     <h3 class="heading-3">Spolupracuji s neziskovými organizacemi</h3>
     <container class="organizations__container">
         <div class="organizations__organization">
-            <svg viewBox="0 0 113 100" class="organization__waterlily organizations__svg--waterlily">
-                <use xlink:href="#waterlily"></use>
-            </svg>
-            <h4 class="heading-4">MAS BRÁNA BRNĚNSKA</h4>
+            <a class="organizations__waterlily" href="https://www.branabrnenska.cz/">
+                <svg preserveAspectRatio="none" viewBox="0 0 71 73" class="organizations__svg organizations__svg--leaf">
+                    <use xlink:href="#leaf"></use>
+                </svg>
+                <svg preserveAspectRatio="none" viewBox="0 0 71 73" class="organizations__svg organizations__svg--leaf">
+                    <use xlink:href="#leaf"></use>
+                </svg>
+                <svg preserveAspectRatio="none" viewBox="0 0 59 65" class="organizations__svg organizations__svg--bloom">
+                    <use xlink:href="#bloom"></use>
+                </svg>
+            </a>
+            <h4 class="heading-4"><a href="https://www.branabrnenska.cz/">MAS BRÁNA BRNĚNSKA</a></h4>
         </div>
         <div class="organizations__organization">
-            <svg viewBox="0 0 113 100" class="organization__svg organizations__svg--waterlily">
-                <use xlink:href="#waterlily"></use>
-            </svg>
-            <h4 class="heading-4">Skleněnka z.s.</h4>
-            
+            <a class="organizations__waterlily" href="http://duhovasklenenka.cz/">
+                <svg preserveAspectRatio="none" viewBox="0 0 71 73" class="organizations__svg organizations__svg--leaf">
+                    <use xlink:href="#leaf"></use>
+                </svg>
+                <svg preserveAspectRatio="none" viewBox="0 0 71 73" class="organizations__svg organizations__svg--leaf">
+                    <use xlink:href="#leaf"></use>
+                </svg>
+                <svg preserveAspectRatio="none" viewBox="0 0 59 65" class="organizations__svg organizations__svg--bloom">
+                    <use xlink:href="#bloom"></use>
+                </svg>
+            </a>
+            <h4 class="heading-4"><a href="http://duhovasklenenka.cz/">Skleněnka z.s.</a></h4>
         </div>
         <div class="organizations__organization">
-            <svg viewBox="0 0 113 100" class="organizations__waterlily organizations__svg--waterlily">
-                <use xlink:href="#waterlily"></use>
-            </svg>
-            <h4 class="heading-4">Škola CoLibri</h4>
-           
+            <a class="organizations__waterlily" href="http://svobodnaskola.cz/">
+                <svg preserveAspectRatio="none" viewBox="0 0 71 73" class="organizations__svg organizations__svg--leaf">
+                    <use xlink:href="#leaf"></use>
+                </svg>
+                <svg preserveAspectRatio="none" viewBox="0 0 71 73" class="organizations__svg organizations__svg--leaf">
+                    <use xlink:href="#leaf"></use>
+                </svg>
+                <svg preserveAspectRatio="none" viewBox="0 0 59 65" class="organizations__svg organizations__svg--bloom">
+                    <use xlink:href="#bloom"></use>
+                </svg>
+            </a>
+            <h4 class="heading-4"><a href="http://svobodnaskola.cz/">Škola CoLibri</a></h4>   
         </div>
     </container>
 </section>
