--- a/App/Views/includes/reviews.html
+++ b/App/Views/includes/reviews.html
@@ -1,3 +1,107 @@
-<section class="reviews">
-    REVIEWS
+<section class="reviews" id="reviews">
+    <div class="review review--hidden">
+        <p class="review__text">
+            <span>
+                “Miluji její humor i hloubku vhledů, které srozumitelně předává jednotlivcům i skupině. Její improvizační doprovázení je jedinečné.”
+            </span>
+            <svg viewBox="0 0 71 73" preserveAspectRatio="none" class="review__leaf review__leaf--visible">
+                <use xlink:href="#leaf"></use>
+            </svg>
+        </p>
+        <div class="review__person">
+            <div class="review__photo">
+                <svg viewBox="0 0 253 273" preserveAspectRatio="none" class="review__wooden-plate">
+                    <use xlink:href="#woodenPlate"></use>
+                </svg>
+                <img src="img/review_vykoupilova.jpg" class="review__img"></img>
+            </div>
+            <h5 class="heading-5">
+                Jarka Vykoupilová
+            </h5>
+        </div>
+    </div>
+    <div class="review review--hidden">
+        <p class="review__text">
+            <span>
+                “Spolupráce s Táňou je vždy povzbuzující, povznášející a podnětná. Pohlazení po duši. První seminář s Táňou měl u klientů takový úspěch, že ji musím zvát znovu a znovu a znovu.”
+            </span>
+            <svg viewBox="0 0 71 73" preserveAspectRatio="none" class="review__leaf">
+                <use xlink:href="#leaf"></use>
+            </svg>
+        </p>
+        <div class="review__person">
+            <div class="review__photo">
+                <svg viewBox="0 0 253 273" preserveAspectRatio="none" class="review__wooden-plate">
+                    <use xlink:href="#woodenPlate"></use>
+                </svg>
+                <img src="img/review_badal.png" class="review__img"></img>
+            </div>
+            <h5 class="heading-5">
+                Jan Badal
+            </h5>
+        </div>
+    </div>
+    <div class="review review--hidden">
+        <p class="review__text">
+            <span>
+                “Táňa Horká a způsob její práce mě zásadně ovlivnil jak v profesním, ale i osobním životě.”   
+            </span>
+            <svg viewBox="0 0 71 73" preserveAspectRatio="none" class="review__leaf">       
+                <use xlink:href="#leaf"></use>
+            </svg>
+        </p>
+        <div class="review__person">
+            <div class="review__photo">
+                <svg viewBox="0 0 253 273" preserveAspectRatio="none" class="review__wooden-plate">
+                    <use xlink:href="#woodenPlate"></use>
+                </svg>
+                <img src="img/review_dobesova.jpg" class="review__img"></img>
+            </div>
+            <h5 class="heading-5">
+                Barbora Dobešová
+            </h5>
+        </div>
+    </div>
+    <div class="review review--hidden">
+        <p class="review__text">
+            <span>
+                “Taťjana a její program mi pomohli si znovu uvědomit vzájemné pochopení a toleranci, což jsou podle mne jedny z nejvyšších životních hodnot.” 
+            </span>
+                    <svg viewBox="0 0 71 73" preserveAspectRatio="none" class="review__leaf">
+                <use xlink:href="#leaf"></use>
+            </svg>
+        </p>
+        <div class="review__person">
+            <div class="review__photo">
+                <svg viewBox="0 0 253 273" preserveAspectRatio="none" class="review__wooden-plate">
+                    <use xlink:href="#woodenPlate"></use>
+                </svg>
+                <img src="img/review_kaderkova.jpg" class="review__img"></img>
+            </div>
+            <h5 class="heading-5">
+                Petra Kaderková
+            </h5>
+        </div>
+    </div>
+    <div class="review review--hidden">
+        <p class="review__text">
+            <span>
+                “Učím sa od ní nebrať sa príliš vážne, nadľahčovať ,prijímať,  baviť sa a milovať život aj v časoch, keď nám nie je zrovna najveselšie.”      
+            </span>
+                  <svg viewBox="0 0 71 73" preserveAspectRatio="none" class="review__leaf">
+                <use xlink:href="#leaf"></use>
+            </svg>
+        </p>
+        <div class="review__person">
+            <div class="review__photo">
+                <svg viewBox="0 0 253 273" preserveAspectRatio="none" class="review__wooden-plate">
+                    <use xlink:href="#woodenPlate"></use>
+                </svg>
+                <img src="img/review_bajkaiova.jpg" class="review__img"></img>
+            </div>
+            <h5 class="heading-5">
+                Zuzana Bajkaiova
+            </h5>
+        </div>
+    </div>
 </section>
