--- a/src/client/scss/main.scss
+++ b/src/client/scss/main.scss
@@ -7,6 +7,7 @@
 @import 'base/utilities';
 
 @import 'components/cooperation-way';
+@import 'components/review';
 
 @import 'sections/cooperation';
 @import 'sections/events';
@@ -17,4 +18,5 @@
 @import 'sections/profile';
 @import 'sections/topics';
 @import 'sections/way';
+@import 'sections/reviews';
 
