--- a/src/client/scss/sections/_organizations.scss
+++ b/src/client/scss/sections/_organizations.scss
@@ -6,6 +6,10 @@ $bp-organizations-mobile: 800px;
 
     position: relative;
 
+    @media screen and (max-width: $bp-organizations-mobile) {
+       padding-bottom: 0;
+    }
+
     &__svg {
         position: absolute;
         z-index: 50;
@@ -33,9 +37,32 @@ $bp-organizations-mobile: 800px;
                 height: 30rem;
             }
         }
-        &--waterlily {
-            transition: transform .5s;
+        &--leaf {
+            width: 100%;
+            height: 100%;
+
+            &:first-of-type {
+                transform: translateX(-3rem) translateY(.5rem) rotate(-10deg) scale(.75); 
+
+                @media screen and (max-width: $bp-organizations-mobile) {
+                    transform: translateX(-2rem) translateY(.5rem) rotate(-10deg) scale(.75); 
+                }
+            }
+            &:not(:first-of-type) {
+                transform: translateX(2.5rem) translateY(0rem) rotate(130deg) scale(.75);
+
+                @media screen and (max-width: $bp-organizations-mobile) {
+                    transform: translateX(1.5rem) translateY(0rem) rotate(130deg) scale(.75);
+                }
+            }
         }
+        &--bloom {
+            width: 100%;
+            height: 100%;
+
+            transform: scaleX(-1) rotate(-10deg);
+        }
+       
     }
     & .heading-3 {
         width: 30rem;
@@ -53,13 +80,8 @@ $bp-organizations-mobile: 800px;
         }
     }
     & .heading-4 {
-        margin-top: -4rem;
         position: relative;
         z-index: 2;
-
-        @media screen and (max-width: 500px) {
-            margin-top: -3rem;
-        }
     }
     &__bg {
         height: 40rem;
@@ -80,7 +102,7 @@ $bp-organizations-mobile: 800px;
         @media screen and (max-width: $bp-organizations-mobile) {
             margin-top: 0;
             padding-top: 20rem;
-            height: 50rem;
+            height: 55rem;
 
             position: relative;
         }
@@ -91,7 +113,7 @@ $bp-organizations-mobile: 800px;
     }
     &__organization {
         height: 20rem;
-        width: 40rem;
+        width: 25rem;
 
         display: flex;
         flex-direction: column;
@@ -100,8 +122,8 @@ $bp-organizations-mobile: 800px;
         position: relative;
 
         @media screen and (max-width: $bp-organizations-mobile) {
-            height: 17rem;
-            width: 30rem;
+            height: 10rem;
+            width: 25rem;
             
             &:first-of-type {
                 position: absolute;
@@ -109,8 +131,7 @@ $bp-organizations-mobile: 800px;
             }
         }
         @media screen and (max-width: 500px) {
-            height: 13rem;
-            width: 25rem;
+            height: 10rem;
         }
         @media screen and (max-width: 400px) {
             height: 10rem;
@@ -123,8 +144,8 @@ $bp-organizations-mobile: 800px;
         }
 
         &:hover {
-            & .organizations__svg--waterlily {
-                transform: translateY(1rem);
+            & .organizations__waterlily {
+                transform: translateY(.5rem);
             }
         }
     }
@@ -132,11 +153,36 @@ $bp-organizations-mobile: 800px;
         background-image: url('../img/wave.svg');
         background-size: contain;
         background-repeat: no-repeat;
-        width: 10rem;
-        height: 10rem;
+        width: 8rem;
+        height: 8rem;
 
         position: absolute;
-        top: 3rem;
+        top: .5rem;
         z-index: -1;
+
+        @media screen and (max-width: 1100px) {
+            width: 6rem;
+            height: 6rem;
+        }
+        @media screen and (max-width: $bp-organizations-mobile) {
+            width: 4.5rem;
+            height: 4.5rem;
+        }
+        @media screen and (max-width: 500px) {
+            width: 4rem;
+            height: 4rem;
+        }
+    }
+    &__waterlily {
+        width: 6rem;
+        height: 6rem;
+        transition: transform .3s;
+
+        position: relative;
+
+        @media screen and (max-width: $bp-organizations-mobile) {
+            width: 5rem;
+            height: 5rem;
+        }
     }
 }
