Fixes after pd merge

--- a/App/Views/includes/topics.html
+++ b/App/Views/includes/topics.html
@@ -8,7 +8,7 @@
             <svg class="topics__text__head__svg" width="59" height="65" viewBox="0 0 59 65" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <use xlink:href="#bloom"></use> 
             </svg>
-            <h1 class="topics__text__head__text">Témata konzultací</h1>
+            <h3 class="heading-3">Témata konzultací</h3>
         </div>
         <div class="topics__text__consultation paragraph-1">Konzultace se nejčastěji týkají mezilidských vztahů, komunikace, osobnostního rozvoje, zvyšování kvality života, hledaní zdrojů při zvládání stresu, zlepšování zdravotní a psychické kondice, řešení konfliktních situací a zvladaní emocí. Dále se objevují témata, jak přistupovat k dětem a doprovázet je při emočních konfrontacích, partnerská problematika, posílení vlastních kompetencí při komunikaci v týmu, s nadřízeným, při prezentaci ve firmach.</div>
         <div class="topics__text__reflect paragraph-1">- Osobní rozvoj</div>
