--- a/App/Views/includes/footer.html
+++ b/App/Views/includes/footer.html
@@ -1,27 +1,20 @@
-        <!--FOOTER-->
         <footer class="footer">
-            <svg class="footer__stain" width="591" height="592" viewBox="0 0 591 592" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="#decorationShape"></use> 
-            </svg>
-            <svg class="footer__root" width="890" height="81" viewBox="0 0 890 81" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="#root"></use>
-            </svg> 
             <div class="footer__columns">
-                <div class="footer__columns__contact">
+                <div class="footer__columns__column">
                     <h5 class="heading-5">Kontakt</h5>
                     <p class="paragraph-1">Ič: 079 52 320</p>
                     <p class="paragraph-1">tatjanahorka@gmail.com</p>
                     <p class="paragraph-1 paragraph-1__break">+420 777 743 704</p>
                     <p class="paragraph-1">Volejte Po - Pá mezi 18:00-19:00</p>
                 </div>
-                <div class="footer__columns__price">
+                <div class="footer__columns__column">
                     <h5 class="heading-5">Cena za konzultační služby</h5>
                     <p class="paragraph-1">Individuální konzultační hodina / 2 500 Kč</p>
                     <p class="paragraph-1">Párová konzultační hodina / 3 700 Kč</p>
                     <p class="paragraph-1 paragraph-1__break">Skupinová práce hodina / 5 000 Kč</p>
                     <p class="paragraph-1">Cestovní náhrady jsou stanoveny podle počtu kilometrů</p>
                 </div>
-                <div class="footer__columns__help">
+                <div class="footer__columns__column footer__columns__help">
                     <h5 class="heading-5 footer__columns__help__head">S tvorbou webu pomohl</h5>
                     <img src="img/group.jpg" alt="Amnion Web" class="footer__columns__help__photo">
                     <p class="footer__columns__help__text">AmnioN Web</p>
