--- a/App/Views/includes/footer.html
+++ b/App/Views/includes/footer.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="footer__columns__column footer__columns__help">
                     <h5 class="heading-5 footer__columns__help__head">S tvorbou webu pomohl</h5>
-                    <img src="img/group.jpg" alt="Amnion Web" class="footer__columns__help__photo">
+                    <!-- <img src="img/group.jpg" alt="Amnion Web" class="footer__columns__help__photo"> -->
                     <p class="footer__columns__help__text">AmnioN Web</p>
                 </div>
             </div>   
