--- a/public/css/style.css
+++ b/public/css/style.css
@@ -96,7 +96,7 @@ a:link {
 
 .heading-5 {
   font-weight: 400;
-  font-size: 3.3rem;
+  font-size: 2.5rem;
   margin-bottom: 1rem; }
 
 .paragraph-1 {
@@ -378,120 +378,7 @@ a:link {
   align-items: center;
   justify-content: center;
   position: relative;
-  z-index: 2;
-  /* &__btn-block {
-        width: 51rem;
-        height: 38rem;
-        filter: drop-shadow(0 2px 4px $color-black-overlay-light);
-
-        position: relative;
-
-        @media only screen and (max-width: 1000px) {
-            display: none;
-        }
-
-        &--prev {
-            transform: translateX(-20%);   
-        }
-        &--next {
-            transform: translateX(20%);
-        }
-
-        & svg {
-            width: 100%;
-            height: 100%;
-            fill: $color-green-light;
-
-            @media only screen and (max-width: 1600px) {
-                display: none;
-            }
-        }
-    }
-    &__mobile-btns {
-        width: 100%;
-        height: auto;
-        margin-top: 5rem;
-
-        flex-shrink: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        @media only screen and (min-width: 1001px) {
-            display: none;
-        }
-    }
-    &__btn-wrapper {
-        width: 7rem;
-        height: 15rem;
-        filter: drop-shadow(0 2px 4px $color-black-overlay-light-2);
-        cursor: pointer;
-
-        position: absolute;
-        top: 50%;
-
-        transition: all .1s;
-
-        &:hover {
-            filter: drop-shadow(0 1px 1px $color-black-overlay-light-2);
-        }
-
-        &.eventsBtnPrev {
-            transform: translate(50%, -50%) scale(-1);
-
-            right: 42%;
-
-            &:hover {                    
-                transform: translate(50%, -50%) scale(-.95);
-
-                @media only screen and (max-width: 1000px) {
-                    transform: scale(-.95);
-                }
-            }
-
-            @media only screen and (max-width: 1600px) {
-                right: 25%;
-            }
-            @media only screen and (max-width: 1000px) {
-                margin-right: 5rem;
-                transform: scale(-1);
-            }
-        }
-        &.eventsBtnNext {
-            transform: translate(-50%, -50%);                
-
-            left: 42%;
-
-            &:hover {                    
-                transform: translate(-50%, -50%) scale(.95);
-
-                @media only screen and (max-width: 1000px) {
-                    transform: scale(.95);
-                }
-            }
-
-            @media only screen and (max-width: 1600px) {
-                left: 25%;
-            }
-            @media only screen and (max-width: 1000px) {
-                transform: none;
-            }
-        }
-
-        @media only screen and (max-width: 1800px) {
-            width: 6rem;
-            height: 12rem;
-        }
-        @media only screen and (max-width: 1000px) {
-            position: static;
-        }
-    }
-    &__btn {
-        width: 100%;
-        height: 100%;
-        background-color: $color-green;
-        clip-path: polygon(0 0, 100% 50%, 0 100%);
-    } */ }
+  z-index: 2; }
   @media only screen and (max-width: 1000px) {
     .events {
       align-content: center;
@@ -604,90 +491,63 @@ a:link {
     @media only screen and (max-width: 800px) {
       .footer__columns .paragraph-1__break {
         margin-bottom: 1rem; } }
-    @media only screen and (max-width: 1400px) {
-      .footer__columns .heading-5 {
-        font-size: 2.5rem; } }
-    @media only screen and (max-width: 1100px) {
-      .footer__columns .heading-5 {
-        font-size: 2rem; } }
-    @media only screen and (max-width: 800px) {
-      .footer__columns .heading-5 {
-        font-size: 2.5rem;
-        margin-bottom: 3rem; } }
-    @media only screen and (max-width: 510px) {
-      .footer__columns .heading-5 {
-        font-size: 2rem; } }
     .footer__columns__column:not(:last-child) {
       margin-right: 3rem; }
-    @media only screen and (max-width: 1000px) {
-      .footer__columns__help {
-        margin: 1rem; } }
-    @media only screen and (max-width: 800px) {
-      .footer__columns__help {
+    .footer__columns__help {
+      position: relative;
+      /* &__photo {
+                width: 40rem;
+                height: 22rem;
+
+                object-fit: cover;
+
+                @media only screen and (max-width: 1400px) {
+                    width: 25rem;
+                    height: 14rem;
+                }
+                @media only screen and (max-width: 1000px) {
+                    width: 18rem;
+                    height: 10rem;
+                }
+                @media only screen and (max-width: 800px) {
+                    width: 70vw;
+                    height: auto;
+
+                    padding-right: 7rem;
+                }
+                @media only screen and (max-width: 680px) {
+                    padding-right: 0;
+                }
+                @media only screen and (max-width: 580px) {
+                    padding-left: 7rem;
+                }
+                @media only screen and (max-width: 500px) {
+                    padding-left: 4rem;
+                }
+                @media only screen and (max-width: 430px) {
+                    padding-left: 2rem;
+                }
+                @media only screen and (max-width: 370px) {
+                    padding-left: 7rem;
+                }
+                @media only screen and (max-width: 330px) {
+                    padding-left: 5rem;
+                }
+            } */ }
+      @media only screen and (max-width: 1000px) {
+        .footer__columns__help {
+          margin: 1rem; } }
+      @media only screen and (max-width: 800px) {
+        .footer__columns__help {
+          width: 100%;
+          margin: 1; } }
+      .footer__columns__help__text {
+        /* transform: translate(-50%, 50%);
+
+                position: absolute;
+                bottom: 0; */
         width: 100%;
-        margin: 1; } }
-    .footer__columns__help__photo {
-      width: 40rem;
-      height: 22rem; }
-      @media only screen and (max-width: 1400px) {
-        .footer__columns__help__photo {
-          width: 25rem;
-          height: 14rem; } }
-      @media only screen and (max-width: 1000px) {
-        .footer__columns__help__photo {
-          width: 18rem;
-          height: 10rem; } }
-      @media only screen and (max-width: 800px) {
-        .footer__columns__help__photo {
-          width: 70vw;
-          height: auto;
-          padding-right: 7rem; } }
-      @media only screen and (max-width: 680px) {
-        .footer__columns__help__photo {
-          padding-right: 0; } }
-      @media only screen and (max-width: 580px) {
-        .footer__columns__help__photo {
-          padding-left: 7rem; } }
-      @media only screen and (max-width: 500px) {
-        .footer__columns__help__photo {
-          padding-left: 4rem; } }
-      @media only screen and (max-width: 430px) {
-        .footer__columns__help__photo {
-          padding-left: 2rem; } }
-      @media only screen and (max-width: 370px) {
-        .footer__columns__help__photo {
-          padding-left: 7rem; } }
-      @media only screen and (max-width: 330px) {
-        .footer__columns__help__photo {
-          padding-left: 5rem; } }
-    .footer__columns__help__text {
-      transform: translate(28rem, -3rem);
-      font-size: 2.5rem; }
-      @media only screen and (max-width: 1400px) {
-        .footer__columns__help__text {
-          transform: translate(18rem, -3rem); } }
-      @media only screen and (max-width: 1000px) {
-        .footer__columns__help__text {
-          transform: translate(8rem, -3rem); } }
-      @media only screen and (max-width: 800px) {
-        .footer__columns__help__text {
-          padding-right: 10rem;
-          transform: translateX(22%); } }
-      @media only screen and (max-width: 680px) {
-        .footer__columns__help__text {
-          transform: translateX(25%); } }
-      @media only screen and (max-width: 580px) {
-        .footer__columns__help__text {
-          transform: translateX(35%); } }
-      @media only screen and (max-width: 430px) {
-        .footer__columns__help__text {
-          transform: translateX(25%); } }
-      @media only screen and (max-width: 370px) {
-        .footer__columns__help__text {
-          transform: translateX(27%); } }
-      @media only screen and (max-width: 330px) {
-        .footer__columns__help__text {
-          transform: translateX(23%); } }
+        text-align: center; }
 
 .header {
   height: 100vh;
@@ -802,7 +662,7 @@ a:link {
       right: 2rem; } }
 
 .organizations {
-  padding-bottom: 20rem;
+  padding-bottom: 15rem;
   position: relative; }
   @media screen and (max-width: 800px) {
     .organizations {
@@ -850,10 +710,22 @@ a:link {
     width: 30rem;
     color: #000000;
     text-align: center;
+    position: absolute;
     top: 30rem;
     left: 50%;
-    position: absolute;
     transform: translateY(-50%) translateX(-50%); }
+    .organizations .heading-3::after {
+      content: "";
+      width: 30rem;
+      height: 30rem;
+      border-radius: 50%;
+      background-image: radial-gradient(#ffffff 90%, transparent);
+      display: block;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      z-index: -1;
+      transform: translate(-50%, -50%); }
     @media screen and (max-width: 500px) {
       .organizations .heading-3 {
         top: 25rem; } }
@@ -869,9 +741,10 @@ a:link {
       .organizations__bg {
         height: 33rem; } }
   .organizations__container {
-    margin-top: 30rem;
+    margin-top: 15rem;
+    padding: 0 15rem;
     display: flex;
-    justify-content: space-around; }
+    justify-content: space-between; }
     @media screen and (max-width: 800px) {
       .organizations__container {
         margin-top: 0;
@@ -882,7 +755,6 @@ a:link {
       .organizations__container {
         padding-top: 10rem; } }
   .organizations__organization {
-    height: 20rem;
     width: 25rem;
     display: flex;
     flex-direction: column;
