--- a/src/client/scss/sections/_organizations.scss
+++ b/src/client/scss/sections/_organizations.scss
@@ -2,7 +2,7 @@
 $bp-organizations-mobile: 800px;
 //
 .organizations {
-    padding-bottom: 20rem;
+    padding-bottom: 15rem;
 
     position: relative;
 
@@ -70,10 +70,26 @@ $bp-organizations-mobile: 800px;
         color: $color-black;
         text-align: center;
        
+        position: absolute;
         top: 30rem;
         left: 50%;
-         position: absolute;
         transform: translateY(-50%) translateX(-50%);
+
+        &::after {
+            content: "";
+            width: 30rem;
+            height: 30rem;
+            border-radius: 50%;
+            background-image: radial-gradient($color-white 90%, transparent) ;
+
+            display: block;
+
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            z-index: -1;
+            transform: translate(-50%, -50%);
+        }
 
         @media screen and (max-width: 500px) {
             top: 25rem;
@@ -94,10 +110,11 @@ $bp-organizations-mobile: 800px;
         }
     }
     &__container {
-        margin-top: 30rem;
+        margin-top: 15rem;
+        padding: 0 15rem;
         
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
 
         @media screen and (max-width: $bp-organizations-mobile) {
             margin-top: 0;
@@ -112,7 +129,6 @@ $bp-organizations-mobile: 800px;
 
     }
     &__organization {
-        height: 20rem;
         width: 25rem;
 
         display: flex;
